<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.homework.ui.home.HomeFragment"
        android:label="@string/menu_home">

        <action
            android:id="@+id/action_homeFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />

        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.example.homework.ui.discover.DiscoverFragment"
        android:label="@string/menu_discover">

        <action
            android:id="@+id/action_discoverFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />

        <action
            android:id="@+id/action_discoverFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.homework.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite">

        <action
            android:id="@+id/action_favoriteFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.homework.ui.profile.ProfileFragment"
        android:label="@string/menu_profile">

        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.homework.ui.settings.SettingsFragment"
        android:label="@string/settings_title">

        <action
            android:id="@+id/action_settingsFragment_to_weatherCityFragment"
            app:destination="@id/weatherCityFragment" />
    </fragment>

    <fragment
        android:id="@+id/weatherCityFragment"
        android:name="com.example.homework.ui.weather.WeatherCityFragment"
        android:label="@string/weather_city_title" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.homework.ui.search.SearchFragment"
        android:label="@string/menu_search">

        <action
            android:id="@+id/action_searchFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />

        <argument
            android:name="query"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/newsDetailFragment"
        android:name="com.example.homework.ui.detail.NewsDetailFragment"
        android:label="@string/detail_page_title">

        <action
            android:id="@+id/action_newsDetailFragment_self"
            app:destination="@id/newsDetailFragment" />

        <action
            android:id="@+id/action_newsDetailFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />

        <argument
            android:name="newsId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.example.homework.ui.web.WebViewFragment"
        android:label="@string/web_title">

        <argument
            android:name="url"
            app:argType="string" />

        <argument
            android:name="title"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

</navigation>
